# bouncer

./: Cargo.toml  clippy.toml  rust-toolchain.toml
bouncer/: Cargo.toml
bouncer-bin/: Cargo.toml
bouncer-bin/src/: main.rs
bouncer-bot/: Cargo.toml
bouncer-bot/src/: client.rs  context.rs  event_handler.rs  lib.rs
bouncer-cli/: Cargo.toml
bouncer-cli/src/: lib.rs
bouncer-config/: Cargo.toml
bouncer-config/src/: discord.rs  lib.rs
bouncer-framework/: Cargo.toml
bouncer-framework/src/: client.rs  context.rs  event_handler.rs  lib.rs
bouncer-framework/src/command/: mod.rs
bouncer-framework/src/exts/: interaction.rs
bouncer-macros/: Cargo.toml
bouncer-macros/src/: lib.rs
bouncer-macros/src/attributes/: command.rs  mod.rs  option.rs
bouncer-macros/src/derive/: command.rs
bouncer/src/: event_handler.rs  main.rs
bouncer/src/commands/: meow.rs  mod.rs
