[workspace]
members = [
  "bouncer",
  "bouncer-cli",
  "bouncer-config",
  "bouncer-framework",
  "bouncer-macros",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
license = "GPL-3.0"
publish = false
edition = "2024"
rust-version = "1.85.0"

[profile.release]
lto = "thin"

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
secrecy = { version = "0.10.3" }
thiserror = "2.0.9"
tokio = "1.42.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-cache-inmemory = "0.16.0-rc.1"
twilight-gateway = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
twilight-util = "0.16.0-rc.1"
twilight-validate = "0.16.0-rc.1"

[patch.crates-io]
figment = { git = "https://github.com/CodingAnarchy/Figment", rev = "e1e7bc7" }
