[workspace]
members = [
  "bouncer",
  "bouncer-cli",
  "bouncer-config",
  "bouncer-framework",
  "bouncer-macros",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
license = "GPL-3.0"
publish = false
edition = "2024"
rust-version = "1.85.0"

[profile.release]
lto = "thin"

[workspace.lints.clippy]
nursery = "warn"
unused_trait_names = "warn"
std_instead_of_core = "warn"

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
secrecy = "0.10.3"
thiserror = "2.0.12"
tokio = "1.44.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-util = "0.16.0"
twilight-validate = "0.16.0"

[patch.crates-io]
figment = { git = "https://github.com/CodingAnarchy/Figment", rev = "e1e7bc7" }
