[package]
name = "bouncer-cli"
version.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile = "3.14.0"
