[package]
name = "bouncer-config"
version.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "yaml"] }
