[package]
name = "bouncer-config"
version.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
figment = { version = "0.10.19", features = ["env", "yaml"] }
secrecy = { workspace = true, features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
figment = { version = "0.10.19", features = ["test"] }
