[package]
name = "bouncer-framework"
version.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
paste = "1.0.15"
secrecy.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
twilight-cache-inmemory.workspace = true
twilight-gateway.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
