[package]
name = "bouncer-macros"
version.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools = "0.13.0"
proc-macro2 = "1.0.92"
syn = { version = "2.0.93", features = ["parsing"] }
quote = "1.0.38"
twilight-validate.workspace = true
