[package]
name = "bouncer-macros"
version.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
syn = { version = "2.0.99", features = ["parsing"] }
quote = "1.0.39"
twilight-validate.workspace = true
