[package]
name = "bouncer-macros"
version.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
darling = { git = "https://github.com/TedDriggs/darling", rev = "f18d5d53883ee62377f2374bfb272b8d67e03754" }
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.99", features = ["parsing"] }
twilight-validate.workspace = true
