[package]
name = "bouncer"
version.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bouncer-config = { path = "../bouncer-config" }

anyhow.workspace = true
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
