[package]
name = "bouncer"
version.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bouncer-framework = { path = "../bouncer-framework" }
bouncer-config = { path = "../bouncer-config" }
bouncer-cli = { path = "../bouncer-cli" }

anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
twilight-cache-inmemory.workspace = true
twilight-gateway.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
